2009-03-29  Darin Adler  <darin@apple.com>

        Reviewed by Cameron Zwarich.

        Bug 24922: change WorkQueue-based navigation tests to not depend on synchronous form submission
        https://bugs.webkit.org/show_bug.cgi?id=24922

        * fast/forms/targeted-frame-submission.html: Changed test to wait until the subframe loads
        before moving on to the next test, using an onload attribute.

        * http/tests/navigation/fallback-anchor-reload.html: Removed use of queueScript here for a
        script that can instead just be run immedidately.

        * http/tests/navigation/onload-navigation-iframe-timeout.html: Changed test to wait until
        the subframe loads before moving on to the next test, using an onload attribute.
        * http/tests/navigation/onload-navigation-iframe.html: Ditto.

        * http/tests/navigation/resources/testcode.js: Use queueNonLoadingScript instead of
        queueScript for scripts that don't involve submitting a form. Use queueLoadingScript
        for scripts that do involve submitting a form.

2009-03-29  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6015407> attr parsing should allow only identifiers

        * fast/css/attr-parsing-expected.txt: Added.
        * fast/css/attr-parsing.html: Added.

2009-03-29  Darin Adler  <darin@apple.com>

        Bug 12104: Native Slider: When the thumb's height is specified as a percentage, it is not centered properly
        https://bugs.webkit.org/show_bug.cgi?id=12104

        Landed the test case from this bug. The bug was fixed by the fix for bug 24740 below.

        * fast/forms/range-thumb-height-percentage.html: Added.
        * platform/mac/fast/forms/range-thumb-height-percentage-expected.checksum: Added.
        * platform/mac/fast/forms/range-thumb-height-percentage-expected.png: Added.
        * platform/mac/fast/forms/range-thumb-height-percentage-expected.txt: Added.
