@@ -1,15 +1,17 @@
 <html>
     <head>
         <script>
+
             function runTest()
             {
                 if (window.layoutTestController)
                     layoutTestController.waitUntilDone();
 
-                // Not dumping as text since the DumpRenderTree does not dump the text conetnt of child frames.                
+                // Not dumping as text since the DumpRenderTree does not dump the text content of child frames.                
                 var button = document.getElementById('blankButton');
                 button.click();
             }
+
             function subframeLoaded()
             {
                 if (document.getElementsByTagName('iframe')[0].contentDocument.URL == "about:blank")
@@ -17,6 +19,7 @@
                 if (window.layoutTestController)
                     layoutTestController.notifyDone();
             }
+
         </script>
     </head>
     <body onload="runTest()">
